# SiGra

./: pyproject.toml  requirements.txt
sigra/: processing.py  processing_merscope.py  processing_nanostring.py  processing_visium.py  train.py  train_merscope.py  train_nanostring.py  train_transformer.py  train_visium.py  transModel.py  utils.py
