[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SiGra"
description = "Single-cell spatial elucidation through image-augmented graph transformer"
version = "0.1"
license = { file = "LICENSE" }
readme = "README.md"

[project.packages]
include = ["SiGra"]

[project.urls]
repository = "https://github.com/QSong-github/SiGra"
